# brcpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
res/diag/: stod.diagsession
src/: CMakeLists.txt  bench.cpp  main.cpp  test.cpp
src/brc/: brc.cpp  brc.hpp
